Add cart route to remove product
